# container-image-pruner

./: Cargo.toml  README.md  action.yml
.github/workflows/: ci.yml  nightly.yml  release.yml  test-action.yml
scripts/: check-asset-name.sh  check-flag-contract.sh  prune.sh
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  policy.rs  prune.rs  report.rs
src/domain/: mod.rs  plan.rs  tag.rs
src/github/: auth.rs  client.rs  mod.rs  models.rs  packages.rs  registry.rs
tests/: action_e2e.rs  github_api_test.rs  live_smoke.rs  orchestrator_test.rs
tests/fixtures/: stub-pruner-degraded.sh  stub-pruner.sh
